[build-system]
requires = ["wheel", "setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/relaxed/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    "--cov=relaxed",
    "--cov-report=xml",
    "--cov-report=term-missing"
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:No GPU/TPU found, falling back to CPU.:UserWarning",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:JAX on Mac ARM machines is experimental and minimally tested.*:UserWarning"

]
testpaths = [
    "tests",
]


[tool.pycln]
all = true


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true


[tool.check-manifest]
ignore = [
    ".github/**",
    "docs/**",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "src/*/_version.py",
    "noxfile.py",
]

[tool.isort]
profile = "black"
