[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "relaxed"
authors = [
  { name = "Nathan Simpson", email = "nsimpson@turing.ac.uk" },
]
description = "Differentiable versions of common HEP operations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "equinox>=0.10.6", # eqx.field
  "jaxopt>=0.7",     # LBFGSB
  "typing_extensions >=4.6; python_version<'3.11'",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pyhf[jax] >=0.7.0",
  "iminuit",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx_book_theme>=0.1.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo",
]

[project.urls]
Homepage = "https://github.com/gradhep/relaxed"
"Bug Tracker" = "https://github.com/gradhep/relaxed/issues"
Discussions = "https://github.com/gradhep/relaxed/discussions"
Changelog = "https://github.com/gradhep/relaxed/releases"
[tool.hatch]
version.path = "src/relaxed/__init__.py"
envs.default.dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
  "ignore::DeprecationWarning:pyhf.*",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["relaxed"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = [
    "no-any-return",    # return involving untyped jax functions
    "no-untyped-call",  # e.g. jax.fori_loop
    "misc",             # subclassing untyped equinox module
    "import",           # using equinox (untyped)
]

[[tool.mypy.overrides]]
module = "relaxed.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
]
typing-modules = ["relaxed._compat.typing"]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
