[metadata]
name = relaxed
description = Provides differentiable versions of common operations in high-energy physics analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gradhep/relaxed
author = Nathan Simpson
author_email = n.s@cern.ch
maintainer = Nathan Simpson
maintainer_email = n.s@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://relaxed.readthedocs.io/
    Bug Tracker = https://github.com/gradhep/relaxed/issues
    Discussions = https://github.com/gradhep/relaxed/discussions
    Changelog = https://github.com/gradhep/relaxed/releases

[options]
packages = find:
install_requires =
    immutables
    jax==0.1.71
    jax-fixedpoint==0.0.4
    jaxlib==0.1.50
    pyhf
python_requires = >=3.7, <3.9
package_dir =
    =src

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
dev =
    pytest>=4.6
    pytest-cov>=2.6.1
docs =
    Sphinx>=3.0.0
    myst_parser>=0.13
    sphinx-book-theme>=0.0.33
    sphinx_copybutton
test =
    pytest>=4.6
    pytest-cov>=2.6.1

[options.package_data]
relaxed =
    py.typed

[tool:pytest]
addopts = -ra -Wd --cov=cabinetry --cov-report html --cov-report term-missing
testpaths =
    tests

[check-manifest]
per-file-ignores =
    tests/*: T
    .github/**
    docs/**
    .pre-commit-config.yaml
    .readthedocs.yml
    src/*/_version.py

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B9,I
per-file-ignores =
    __init__.py: D104,
    setup.py: D100

[mypy]
files = src
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
