[metadata]
name = relaxed
description = Differentiable versions of common operations in high-energy physics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gradhep/relaxed
author = Nathan Simpson
author_email = n.s@cern.ch
maintainer = Nathan Simpson
maintainer_email = n.s@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://relaxed.readthedocs.io/
    Bug Tracker = https://github.com/gradhep/relaxed/issues
    Discussions = https://github.com/gradhep/relaxed/discussions
    Changelog = https://github.com/gradhep/relaxed/releases

[options]
packages = find:
install_requires =
    chex>=0.1
    jaxopt
    optax
    typing_extensions>=3.7;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    iminuit
    pre-commit
    pyhf>=0.6.2
    pytest>=6
    pytest-cov>=3
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    iminuit
    pyhf>=0.6.2
    pytest>=6
    pytest-cov>=3

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
